super_app/test/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: super_app
  name: super_app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: super_app
  template:
    metadata:
      labels:
        app: super_app
    spec:
      containers:
        image: 032629812057.dkr.ecr.us-east-1.amazonaws.com/container-registry/test/super_app:latest
        name: super_app
        ports:
        - containerPort: 5000
          name: super_app
        env:
          - name: ENVIRONMENT
            value: test
        readinessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 5
        livenessProbe:
          httpGet:
            path: /
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 5
        resources:
          requests:
            memory: 1024Mi
            cpu: 0.5m
          limits:
            memory: 1024Mi
            cpu: 0.5m
