super_app/test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
  name: super_app-ingress
spec:
  rules:
  - host: super-app.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: super_app-service
            port:
              number: 80
