super_app/test/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: super_app
  labels:
    apps: super_app
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 80
      name: super_app-service
  selector:
    app: super_app
